# GAC

./: .gitignore  .pre-commit-config.yaml  README.md  example.json  pyproject.toml
src/gac/: __init__.py  auth.py  data.py  fetchers.py  main.py
tests/: test_gac.py
