[tool.poetry]
name = "gac"
version = "0.1.0"
description = ""
authors = ["ktasper <foo.foo@foo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pre-commit = "^2.20.0"
pylint = "^2.14.5"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gac = "gac.main:cli"
